--- a/general.css
+++ b/general.css
@@ -2,7 +2,7 @@
 
 .start {
   margin-top: 0px;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   background:#0093AF;
 }
@@ -279,7 +279,7 @@
   min-height: 37.5%;
   border-radius: 1rem;
   background-color: #0093AF;
-  margin-bottom: 4rem;
+  margin-bottom: 5.5rem;
   z-index: 2;
 }
 
