--- a/general.css
+++ b/general.css
@@ -2,8 +2,8 @@
 
 .start {
   margin-top: 0px;
-  width: 100vw;
-  height: 100vh;
+  width: auto;
+  height: 100%;
   background:#0093AF;
 }
 
@@ -11,7 +11,6 @@
   width: 100%;
   height: 100%;
   opacity: 0.3;
-  padding: 0px;
   position: absolute;
   object-fit: cover;
   z-index:0;
