--- a/index.css
+++ b/index.css
@@ -3,6 +3,10 @@ body {
   font-family: "Josefin Sans";
   width: 100vw;
   height: 100vh;
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
 }
 
 .header1 {
