--- a/index.css
+++ b/index.css
@@ -1,13 +1,9 @@
+html, body {  margin: 0;  padding: 0;}
 
 body {
   font-family: "Josefin Sans";
   width: 100vw;
   height: 100vh;
-  margin-top: 0px;
-  margin-right: 0px;
-  margin-bottom: 0px;
-  margin-left: 0px;
-  padding: 0px;
 }
 
 .header1 {
