--- a/general.css
+++ b/general.css
@@ -60,11 +60,25 @@
   font-weight: 600;
 }
 
+.navBar2 {
+  display: none;
+}
+
+.navBar2 div a {
+  font-family: "Josefin Sans";
+  font-size: 12px;
+}
 
 
 @media screen and (max-width: 900px) {
   .navBar {
     display: none;
+  }
+
+  .navBar2 {
+    display: flex;
+    float: right;
+    justify-content: space-between;
   }
 }
 
@@ -161,7 +175,7 @@
   font-family: "Josefin Sans" ;
   font-weight: 600;
   font-size: 1.2rem;
-  line-height: 1.75rem;
+  line-height: 1.7rem;
   z-index: 2;
 }
 
