--- a/general.css
+++ b/general.css
@@ -423,6 +423,8 @@
   .ct .ui.labeled.big.button {
     left:auto;
     margin-bottom: 5rem;
+    margin-left: 0px;
+    margin-right: 0px;
   }
 
   .ct {
@@ -432,6 +434,7 @@
     align-items: center;
     padding-top: 3rem;
     padding-bottom: 3rem;
+    margin: 0px
   }
 
 
