--- a/general.css
+++ b/general.css
@@ -2,7 +2,8 @@
 
 .start {
   margin: 0px;
-  width: auto;
+  padding: 0px;
+  width: 100%;
   height: 100%;
   background:#0093AF;
 }
@@ -14,13 +15,15 @@
   position: absolute;
   object-fit: cover;
   z-index:0;
+  margin: 0px;
+  padding: 0px;
 }
 
 .start .titles {
   display: block;
   text-align: center;
   position:relative;
-  top: 30%;
+  top: 40%;
 }
 
 .start .titles h1 {
@@ -62,6 +65,7 @@
 
 .navBar2 {
   display: none;
+  width: 100%;
 }
 
 .navBar2 div div a {
@@ -248,6 +252,10 @@
     border-width: 8px 16px 8px 0;
     border-color: transparent #0093AF transparent transparent;
   }
+
+  .timeline ul li:nth-child(odd) div {
+    transform: translate3d(-200px,0,0);
+  }
 }
 
 .timeline ul li::after {
@@ -262,7 +270,7 @@
 .timeline ul li div {
   visibility: hidden;
   opacity: 0;
-  transition: all .5s ease-in-out;
+  transition: all .5s ease-out;
 }
 
 .timeline ul li:nth-child(odd) div {
