--- a/general.css
+++ b/general.css
@@ -143,6 +143,7 @@
 
 .timeline {
   margin-top: 8.75rem;
+  overflow: hidden;
 }
 
 .timeline ul li {
@@ -449,8 +450,4 @@
   #lab2 {
     left: 0%;
   }
-}
-
-* {
-  border: 1px Solid Black;
 }
