--- a/src/components/Pill.astro
+++ b/src/components/Pill.astro
@@ -1,13 +1,14 @@
 <div class="pill"><slot /></div>
 
-<style>
+<style lang="scss">
+  @import '../styles/global.scss';
 	.pill {
 		display: flex;
 		padding: 0.5rem 1rem;
 		gap: 0.5rem;
-		color: var(--accent-text-over);
-		border: 1px solid var(--accent-regular);
-		background-color: var(--accent-regular);
+		color: $gray-0;
+		border: 1px solid $primary-color;
+		background-color: $primary-color;
 		border-radius: 999rem;
 		font-size: var(--text-md);
 		line-height: 1.35;
