--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,9 +11,34 @@
   --gray-800: #e3e6ee;
   --gray-900: #f3f4f7;
   --gray-999: #ffffff;
-  --primary-color: #0093AF;
-  --secondary-color: #FAEBD7;
-  --tertiary-color: $gray-999;
+
+  --accent-light: #00b1cc;
+  --accent-regular: #0093af;
+  --accent-dark: #004957;
+
+  --accent-text-over: --gray-0;
+
+  --background-color-primary: #FAEBD7;
+  --background-color-secondary: var(--gray-999);
+
+	/* Gradients */
+	--gradient-stop-1: var(--accent-light);
+	--gradient-stop-2: var(--accent-regular);
+	--gradient-stop-3: var(--accent-dark);
+
+	--gradient-subtle: linear-gradient(
+    145deg,
+    var(--gradient-stop-2) 0%,
+    var(--gradient-stop-1) 25%,
+    var(--gray-999) 100%
+  );
+
+	--gradient-dark: linear-gradient(
+    145deg,
+    var(--gradient-stop-2) 0%,
+    var(--gradient-stop-1) 60%,
+    var(--gradient-stop-3) 100%
+  );
 }
 
 
@@ -32,10 +57,21 @@ $gray-700: var(--gray-700);
 $gray-800: var(--gray-800);
 $gray-900: var(--gray-900);
 $gray-999: var(--gray-999);
-$primary-color: var(--primary-color);
-$secondary-color: var(--secondary-color);
-$tertiary-color: var(--tertiary-color);
-$link-color: var(--primary-color);
+
+$accent-light: var(--accent-light);
+$accent-regular: var(--accent-regular);
+$accent-dark: var(--accent-dark);
+$background-color-primary: var(--background-color-primary);
+$background-color-secondary: var(--background-color-secondary);
+
+
+$gradient-stop-1: var(--gradient-stop-1);
+$gradient-stop-2: var(--gradient-stop-2);
+$gradient-stop-3: var(--gradient-stop-3);
+$gradient-subtle: var(--gradient-subtle);
+$gradient-dark: var(--gradient-dark);
+
+$link-color: var(--accent-regular);
 
 /* Text Sizes */
 $text-xs: 0.6rem;
@@ -78,6 +114,13 @@ main {
   position: relative;
 }
 
+main:nth-child(odd) {
+  background-color: $background-color-primary;
+}
+main:nth-child(even) {
+  background-color: $background-color-secondary;
+}
+
 @media (min-width: $breakpoint-large) {
   main {
     top: 0;
@@ -85,7 +128,7 @@ main {
 }
 
 a {
-	color: var(--link-color);
+	color: $link-color;
 }
 
 h1,
@@ -122,6 +165,15 @@ h5 {
 .stack {
 	display: flex;
 	flex-direction: column;
+  justify-content: center;
+  width: 90%;
+  margin: 0 auto;
+}
+
+@media (min-width: $breakpoint-large) {
+  .stack {
+    width: 68%;
+  }
 }
 
 .gap-2 {
