--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -97,10 +97,16 @@ $nav-height: 40px;
   -webkit-transition: all .1s ease;
 }
 
+html, body { margin: 0px;  padding: 0px;}
+
+html {
+  height: -webkit-fill-available;
+}
+
 body {
-	height: 100%;
 	overflow-x: hidden;
-  margin: 0;
+  width: 100%;
+  height: 100%;
 
 	background-color: var(--gray-999);
 	color: var(--gray-200);
@@ -114,11 +120,12 @@ main {
   position: relative;
 }
 
-main:nth-child(odd) {
-  background-color: $background-color-primary;
-}
-main:nth-child(even) {
+main > section:nth-child(even) {
   background-color: $background-color-secondary;
+}
+
+main > section:nth-child(odd) {
+  background-color: $background-color-primary;
 }
 
 @media (min-width: $breakpoint-large) {
