--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,18 +3,45 @@ import Timeline, { TimelineBlob } from "./Timeline.astro";
 
 const experiences: TimelineBlob[] = [
   {
-    time: '2019 - 2020',
-    title: 'Graduate Commercial Analyst at Booking.com',
+    time: '2021 - Present',
+    title: 'Software Engineer | THG',
     information: `
-    During my graduate rotations, I have been able to experience multiple branches of the business. Highlights include: <br>
-              •	Being actively sought out and asked to be one of the sole analysts in a high-profile marketing campaign. <br>
-              •	Leading the creation of new and innovative forecasting methods in light of the Covid pandemic.<br>
-              •	Presenting my analysis and recommendations to key stakeholders which are being used to further product development.
+    <ul style="padding-left: 10px;">
+      <li>I managed multiple graduate software engineers and interns.</li>
+      <li>I worked on the project to radically overhaul the website <a href="https://www.coggles.com/">Coggles</a>.
+        <ul>
+          <li>We dropped TTFB by 70%.</li>
+          <li>We improved SEO rankings by 20%.</li>
+          <li>I introduced a CMS to give the content management team greater flexibility.</li>
+          <li>I worked closely with data pipeline team to introduce and monitor a brand new data pipeline for the new site.</li>
+          <li>I was a key member of the team overseeing the architecture switch at 2am.</li>
+        </ul>
+      </li>
+      <li>I worked with our new starters to onboard them and bring our team size up from 3 to 11.</li>
+      <li>I planned weekly sprint items and led the sprint ceremonies.</li>
+    `
+  },
+  {
+    time: '2020-2021',
+    title: 'Graduate Software Engineer | THG',
+    information: `
+    I joined THG to switch career trajectories and move into software engineering. I began their intense 6 month Accelerator training course to convert people who have shown an affinity towards software to software engineers.<br>
+      <ul style="padding-left: 10px;">
+        <li>I completed an in-depth 3 month course on Java spanning from reflection to Spring Boot.</li>
+        <li>In the pair project, I created a Shazam-like application in a week and presented our work to our peers.</li>
+        <li>
+          I joined the Research and Development team after the Accelerator, a small team of only myself and my manager.
+          <ul>
+            <li>I was part of the team which built the patent-pending foundation finder tool.</li>
+            <li>We successfully delivered this tool on time with it now hosted on Look Fantastic.</li>
+          </ul>
+        </li>
+      </ul>
     `
   },
   {
     time: '2019 - 2020',
-    title: 'Graduate Commercial Analyst at Booking.com',
+    title: 'Graduate Commercial Analyst | Booking.com',
     information: `
     During my graduate rotations, I have been able to experience multiple branches of the business. Highlights include: <br>
               •	Being actively sought out and asked to be one of the sole analysts in a high-profile marketing campaign. <br>
