--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -10,7 +10,7 @@
   background-color: $gray-0;
   gap: 1rem;
   z-index: 5;
-  border-radius: 0px;
+  border-radius: 2px;
   height: $nav-height;
   font-size: $text-xs;
   padding-right: 10px;
@@ -20,6 +20,7 @@
     color: $gray-999;
     cursor: pointer;
     font-weight: 500;
+    border-radius: 3px;
   }
 }
 
@@ -37,6 +38,7 @@
     justify-content: flex-start;
     background-color: $gray-999;
     font-size: $text-lg;
+    padding-right: 0;
     align-items: flex-start;
     border-radius: 3%;
     width: $width;
