--- a/src/components/ProjectsAndContributions.astro
+++ b/src/components/ProjectsAndContributions.astro
@@ -1,29 +1,67 @@
 ---
 import Accordian from "./Accordian.astro";
-
-const accordian = [
-  {
-    title: 'Test',
-    body: 'Hello World'
-  },
-  {
-    title: 'Test',
-    body: 'Hello World'
-  }
-]
 ---
 <div>
-{
-  accordian.map(item => {
-    return <Accordian title={item.title} body={item.body} />
-  })
-}
+  <Accordian title="Open Source Contributions">
+    <ul class="github-list">
+      <li><b>Wundergraph/wundergraph</b> - A framework for API composition, allowing to use multiple API's as if it were one.
+        <ul>
+          <li>Pull Request: Fixed the custom scalar functionality for downstream GraphQL services <a href="https://github.com/wundergraph/wundergraph/pull/427">#427</a></li>
+          <li>Issue Creation: Propagating downstream API headers to the client's response. <a href="https://github.com/wundergraph/wundergraph/issues/385">#385</a></li>
+        </ul>
+      </li>
+      <li><b>Wundergraph/graphql-go-tools</b> - The low level building blocks to write graphQL services in Go.
+        <ul>
+          <li>Pull Request: Allow a user to override a GraphQL's argument type. <a href="https://github.com/wundergraph/graphql-go-tools/pull/455">#455</a></li>
+        </ul>
+      </li>
+      <li><b>Algolia/algoliasearch-client-javascript</b> - The low level building blocks to write graphQL services in Go.
+        <ul>
+          <li>Pull Request: Removing mode for CloudFlare workers <a href="https://github.com/algolia/algoliasearch-client-javascript/pull/1452">#1452</a></li>
+        </ul>
+      </li>
+      <li><b>Mswjs/msw</b> - A mocking library for Graphql and Rest APIs.
+        <ul>
+          <li>Pull Request: Support for GraphQL extensions to be mocked <a href="https://github.com/mswjs/msw/pull/981">#981</a></li>
+        </ul>
+      </li>
+    </ul>
+  </Accordian>
 </div>
 <style lang="scss">
-div {
-  width: 60%;
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-}
+  @import '../styles/global.scss';
+
+  div {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+  }
+
+  .github-list {
+    text-align: left;
+    font-size: $text-lg;
+    & > li {
+      list-style-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='25' viewBox='0 0 256 256' aria-hidden='true' stroke='currentcolor' fill='currentcolor'%3E%3Cg%3E%3Cg stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath fill='none' stroke-width='14.7' d='M55.7 167.2c13.9 1 21.3 13.1 22.2 14.6 4.2 7.2 10.4 9.6 18.3 7.1l1.1-3.4a60.3 60.3 0 0 1-25.8-11.9c-12-10.1-18-25.6-18-46.3'%3E%3C/path%3E%3Cpath fill='none' stroke-width='16' d='M61.4 205.1a24.5 24.5 0 0 1-3-6.1c-3.2-7.9-7.1-10.6-7.8-11.1l-1-.6c-2.4-1.6-9.5-6.5-7.2-13.9 1.4-4.5 6-7.2 12.3-7.2h.8c4 .3 7.6 1.5 10.7 3.2-9.1-10.1-13.6-24.3-13.6-42.3 0-11.3 3.5-21.7 10.1-30.4A46.7 46.7 0 0 1 65 67.3a8.3 8.3 0 0 1 5-4.7c2.8-.9 13.3-2.7 33.2 9.9a105 105 0 0 1 50.5 0c19.9-12.6 30.4-10.8 33.2-9.9 2.3.7 4.1 2.4 5 4.7 5 12.7 4 23.2 2.6 29.4 6.7 8.7 10 18.9 10 30.4 0 42.6-25.8 54.7-43.6 58.7 1.4 4.1 2.2 8.8 2.2 13.7l-.1 23.4v2.3'%3E%3C/path%3E%3Cpath fill='none' stroke-width='16' d='M160.9 185.7c1.4 4.1 2.2 8.8 2.2 13.7l-.1 23.4v2.3A98.6 98.6 0 1 0 61.4 205c-1.4-2.1-11.3-17.5-11.8-17.8-2.4-1.6-9.5-6.5-7.2-13.9 1.4-4.5 6-7.2 12.3-7.2h.8c4 .3 7.6 1.5 10.7 3.2-9.1-10.1-13.6-24.3-13.6-42.3 0-11.3 3.5-21.7 10.1-30.4A46.4 46.4 0 0 1 65 67.3a8.3 8.3 0 0 1 5-4.7c2.8-.9 13.3-2.7 33.2 9.9a105 105 0 0 1 50.5 0c19.9-12.6 30.4-10.8 33.2-9.9 2.3.7 4.1 2.4 5 4.7 5 12.7 4 23.2 2.6 29.4 6.7 8.7 10 18.9 10 30.4.1 42.6-25.8 54.7-43.6 58.6z'%3E%3C/path%3E%3Cpath fill='none' stroke-width='18.7' d='m170.1 203.3 17.3-12 17.2-18.7 9.5-26.6v-27.9l-9.5-27.5'%3E%3C/path%3E%3Cpath fill='none' stroke-width='22.7' d='m92.1 57.3 23.3-4.6 18.7-1.4 29.3 5.4m-110 32.6-8 16-4 21.4.6 20.3 3.4 13'%3E%3C/path%3E%3Cpath fill='none' stroke-width='13.3' d='M28.8 133a100 100 0 0 0 66.9 94.4v-8.7c-22.4 1.8-33-11.5-35.6-19.8-3.4-8.6-7.8-11.4-8.5-11.8'%3E%3C/path%3E%3C/g%3E%3C/g%3E%3C/svg%3E") !important;
+      line-height: 3;
+      vertical-align: middle;
+    }
+
+    li {
+      list-style: disc;
+    }
+  }
+
+  @media (max-width: $breakpoint-large) {
+    div {
+      width: 100%;
+    }
+
+    .github-list {
+
+      & > li {
+        line-height: 1.7;
+      }
+    }
+  }
 </style>
