--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -65,24 +65,22 @@ const { sections } = Astro.props
       bottom: 0;
       width: 440px;
       padding: 15px;
-      background: #0093AF;
+      background: $accent-light;
       border-radius: 10px;
       font-weight: 600;
       font-size: 1.2rem;
-      line-height: 1.7rem;
+      line-height: 1.5;
       z-index: 1;
       visibility: hidden;
       opacity: 0;
       transition: all .5s ease-out;
 
       time {
-        font-family: "Josefin Sans";
         font-size: 1.75rem;
         font-weight: 700;
       }
 
       h3{
-        font-family: "Josefin Sans" ;
         font-weight: 600;
         font-size: 1.5rem;
         line-height: 1.75rem;
@@ -107,7 +105,7 @@ const { sections } = Astro.props
   .timeline ul li:nth-child(odd) div::before {
     left: -15px;
     border-width: 8px 16px 8px 0;
-    border-color: transparent #0093AF transparent transparent;
+    border-color: transparent $accent-light transparent transparent;
   }
 
   .timeline ul li:nth-child(even) div {
@@ -118,12 +116,12 @@ const { sections } = Astro.props
   .timeline ul li:nth-child(even) div::before {
     right: -15px;
     border-width: 8px 0 8px 16px;
-    border-color: transparent transparent transparent #0093AF;
+    border-color: transparent transparent transparent $accent-light;
   }
 
 
   .timeline ul li.in-view::after {
-    background: #0093AF;
+    background: $accent-light;
   }
 
   .timeline ul li.in-view div {
@@ -139,6 +137,7 @@ const { sections } = Astro.props
 
     .timeline ul li div {
       width: calc(100vw - 150px);
+      font-size: $text-base;
     }
 
     .timeline ul li:nth-child(even) div {
@@ -157,12 +156,8 @@ const { sections } = Astro.props
 <script>
 function isElementInViewport(el: Element) {
   const rect = el.getBoundingClientRect();
-  return (
-    rect.top + 300 >= 0 &&
-    rect.left >= 0 &&
-    rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
-    rect.right <= (window.innerWidth || document.documentElement.clientWidth)
-  );
+  const screenHeight = window.innerHeight || document.documentElement.clientHeight
+  return (rect.top - screenHeight <= -200) && rect.bottom >= 200;
 }
 
 function callbackFunc() {
