--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -71,7 +71,7 @@ $gradient-stop-3: var(--gradient-stop-3);
 $gradient-subtle: var(--gradient-subtle);
 $gradient-dark: var(--gradient-dark);
 
-$link-color: var(--accent-regular);
+$link-color: var(--accent-dark);
 
 /* Text Sizes */
 $text-xs: 0.6rem;
@@ -110,7 +110,7 @@ body {
   height: 100%;
 
 	background-color: var(--gray-999);
-	color: var(--gray-200);
+	color: var(--gray-100);
   font-family: $font-family;
 	-webkit-font-smoothing: antialiased;
 	line-height: 1.5;
