Changing to yarn and updating for thg

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -4,46 +4,52 @@ import Loader from "./Loader.astro";
 
 const loaders = [
 	{
-		percent: 79,
-		title: 'Typescript',
-		subTitle: 'Pro',
-		description: 'Actively coding both front end and back end projects in typescript.'
+		percent: 90,
+		title: 'AWS + Cloud Services',
+		subTitle: 'Experienced',
+		description: 'Extensive usage of a broad range of AWS services. Expertise in lambdas, IaC and Cloudfront. I have led multiple projects building CDNs on Fastly, AWS and Cloudflare.'
 	},
 	{
 		percent: 85,
-		title: 'AWS',
-		subTitle: 'Pro',
-		description: 'Extensive usage of a broad range of AWS services. Expertise in lambdas, IaC and Cloudfront.'
+		title: 'Typescript',
+		subTitle: 'Experienced',
+		description: 'Actively coding both front end and back end projects in typescript.'
+	},
+	{
+		percent: 82,
+		title: 'Terraform',
+		subTitle: 'Experienced',
+		description: 'Setup multiple providers in tandem in my latest projects. Developed a custom Terraform provider for our in-house API.'
+	},
+	{
+		percent: 80,
+		title: 'CI/CD',
+		subTitle: 'Experienced',
+		description: 'Completed the migration of multiple project\'s CI/CD from Gitlab to Github. Set up the K8s framework for multiple projects.'
+	},
+	{
+		percent: 70,
+		title: 'Rust',
+		subTitle: 'Experienced',
+		description: 'I have actively coded in rust for the past 6 months, building a cutting-edge platform developed on Fastly compute.'
+	},
+	{
+		percent: 65,
+		title: 'Python',
+		subTitle: 'Proficient',
+		description: '2+ years of using Python for both back end projects and data analytics.'
 	},
 	{
 		percent: 62,
 		title: 'Java',
-		subTitle: 'Semi-Pro',
-		description: '2+ years of using Java on and off.'
+		subTitle: 'Proficient',
+		description: '2+ years of using Java on and off. Actively worked on Java GraphQL codebases.'
 	},
 	{
-		percent: 49,
-		title: 'Terraform',
-		subTitle: 'Intermediate',
-		description: 'Setup multiple providers in tandem in my latest projects.'
-	},
-	{
-		percent: 68,
-		title: 'Python',
-		subTitle: 'Semi-Pro',
-		description: '2+ years of using Python for both back end projects and data analytics.'
-	},
-	{
-		percent: 72,
-		title: 'CI/CD and Deployment Automation',
-		subTitle: 'Pro',
-		description: 'Completed the migration of multiple project\'s CI/CD from Gitlab to Github. Set up the K8s framework for multiple projects.'
-	},
-	{
-		percent: 52,
+		percent: 40,
 		title: 'FE Frameworks',
-		subTitle: 'Intermediate',
-		description: 'Proficient in Vue and Astro. Comfortable to pick up quickly other frameworks.'
+		subTitle: 'Basic/Proficient',
+		description: 'Built frontends in Vue and Astro. Comfortable to quickly pick up other frameworks.'
 	}
 ]
 ---
@@ -51,7 +57,7 @@ const loaders = [
   <div class="who-am-i">
     <h3>Who am I?</h3>
     <p>My name is Oscar Lingard and I'm a professional software engineer living and working in Manchester, UK. With a passion for coding and an experience store which continues to grow, I help create cutting-edge software solutions that allow businesses achieve their goals.</p>
-    <p>I specialize in TypeScript and DevOps, with a particular focus on AWS and performant site creation.</p>
+    <p>I specialize in DevOps with a strong coding background in languages including Typescript, Python and Rust. I have a particular focus on building AWS and Fastly cloud services on the edge.</p>
 
     <h3>Education</h3>
     <ul class="education-list">
